--- a/SnP(GPT-weighted).ipynb
+++ b/SnP(GPT-weighted).ipynb
@@ -152,6 +152,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -239,7 +246,7 @@
     "try:\n",
     "    data = pd.read_excel(file_path)\n",
     "except Exception as e:\n",
-    "    print(e)\n",
+    "    print(e) \n",
     "\n",
     "# 모든 열에 대해 티커의 빈도수를 계산하고, 합산하여 전체 빈도수를 계산\n",
     "ticker_frequency = data.apply(pd.value_counts).sum(axis=1).sort_values(ascending=False)\n",
@@ -247,8 +254,7 @@
     "# 가장 빈도가 높은 상위 30개의 티커를 리스트로 추출\n",
     "top_30_tickers = ticker_frequency.head(30).index.tolist()\n",
     "\n",
-    "print(top_30_tickers)\n",
-    "\n"
+    "print(top_30_tickers)"
    ]
   },
   {
