좀따마무리함

--- a/SnP(GPT-weighted).ipynb
+++ b/SnP(GPT-weighted).ipynb
@@ -120,43 +120,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "merged_market_data = pd.read_csv('/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/merged_market_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tickerSymbol             0\n",
-      "priceClose             139\n",
-      "adjustmentFactor         0\n",
-      "divAdjFactor        138326\n",
-      "pricingDate              0\n",
+      "tickerSymbol      0\n",
+      "priceClose      139\n",
+      "pricingDate       0\n",
       "dtype: int64\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m현재 셀 또는 이전 셀에서 코드를 실행하는 동안 Kernel이 충돌했습니다. 셀의 코드를 검토하여 오류의 가능한 원인을 식별하세요. 자세한 내용을 보려면 <a href='https://aka.ms/vscodeJupyterKernelCrash'> 여기 </a> 를 클릭하세요. 자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
    "source": [
-    "# 각 열에 대한 결측값 개수 확인\n",
-    "null_counts = merged_market_data.isnull().sum()\n",
+    "merged_market_data = merged_market_data[['tickerSymbol', 'priceClose', 'pricingDate']]\n",
     "\n",
-    "print(null_counts)\n"
+    "# 각 열의 결측치 수 확인\n",
+    "missing_values = merged_market_data.isna().sum()\n",
+    "\n",
+    "# 결과 출력\n",
+    "print(missing_values)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        tickerSymbol pricingDate\n",
+      "591792            BR  2020-03-09\n",
+      "591805            BR  2020-02-11\n",
+      "591832            BR  2019-12-10\n",
+      "591841            BR  2019-11-13\n",
+      "765498           ICE  2020-02-27\n",
+      "...              ...         ...\n",
+      "1458186          ETR  2020-01-15\n",
+      "1458225          ETR  2019-09-17\n",
+      "1458244          ETR  2019-08-14\n",
+      "1458260          ETR  2019-07-15\n",
+      "1458323          ETR  2019-03-11\n",
+      "\n",
+      "[139 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 결측치가 있는 행만 선택\n",
+    "missing_price_data = merged_market_data[merged_market_data['priceClose'].isna()]\n",
+    "\n",
+    "# 출력\n",
+    "print(missing_price_data[['tickerSymbol', 'pricingDate']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "120.12166595458984\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "\n",
+    "# 티커 심볼 정의\n",
+    "ticker_symbol = \"BR\"\n",
+    "\n",
+    "# 다운로드할 날짜 범위 정의\n",
+    "start_date = \"2020-01-10\"\n",
+    "end_date = \"2020-01-20\"\n",
+    "\n",
+    "# 지정된 날짜 범위에 대한 역사적 데이터 다운로드\n",
+    "data = yf.download(ticker_symbol, start=start_date, end=end_date)\n",
+    "\n",
+    "# 특정 날짜 정의\n",
+    "specific_date = \"2020-01-15\"\n",
+    "\n",
+    "# 지정된 날짜의 수정 종가 가져오기\n",
+    "# 데이터프레임에서 해당 날짜의 인덱스를 직접 참조\n",
+    "adjusted_close_price = data['Adj Close'][specific_date] if specific_date in data.index else \"해당 날짜에 대한 데이터가 없습니다.\"\n",
+    "\n",
+    "print(adjusted_close_price)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
