--- a/Jaekyun/SnP_simulation.ipynb
+++ b/Jaekyun/SnP_simulation.ipynb
@@ -115,6 +115,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 15 Portfolio"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -636,6 +643,77 @@
     "std_dev_performance = np.std(portfolio_performances)\n",
     "\n",
     "mean_performance, std_dev_performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.023610517703862875, 0.18214834096394658)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#시나리오 주간 기대수익률, 표준편차 계산\n",
+    "\n",
+    "def calculate_weighted_returns(scenario, weights):\n",
+    "   \n",
+    "    # 날짜와 같은 비수치 데이터 열 제거\n",
+    "    scenario_numeric = scenario.select_dtypes(include=[np.number])\n",
+    "\n",
+    "    # 가중치가 적용된 수익률 계산\n",
+    "    weighted_returns = scenario_numeric.multiply(weights)\n",
+    "    total_returns = weighted_returns.sum(axis=1)\n",
+    "    return total_returns\n",
+    "\n",
+    "#각 시나리오에 대한 주간 수익률 통계를 계산하는 함수\n",
+    "\n",
+    "def calculate_weekly_statistics(scenarios, weights):\n",
+    "\n",
+    "    weekly_stats = []\n",
+    "\n",
+    "    for scenario in scenarios:\n",
+    "        # 총 가중치가 적용된 수익률 계산\n",
+    "        total_returns = calculate_weighted_returns(scenario, weights)\n",
+    "\n",
+    "        # 주간 수익률 계산\n",
+    "        weekly_returns = total_returns.pct_change(periods=7).dropna()\n",
+    "\n",
+    "        # 통계 계산\n",
+    "        mean_return = weekly_returns.mean()\n",
+    "        std_deviation = weekly_returns.std()\n",
+    "\n",
+    "        weekly_stats.append((mean_return, std_deviation))\n",
+    "\n",
+    "    return weekly_stats\n",
+    "\n",
+    "\n",
+    "# 시나리오 분석 수행\n",
+    "weights_series = pd.Series(gpt_weighted_15)\n",
+    "weekly_statistics = calculate_weekly_statistics(scenarios, weights_series)\n",
+    "\n",
+    "# 첫 번째 시나리오의 통계를 예시로 표시\n",
+    "weekly_statistics[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1주차, 2주차 기대수익률, 표준편차 보기\n",
+    "\n",
+    "weekly_statistics0 = weekly_statistics[0]\n",
+    "weekly_statistics1 = weekly_statistics[1]"
    ]
   },
   {
