--- a/Jaekyun/SnP_simulation.ipynb
+++ b/Jaekyun/SnP_simulation.ipynb
@@ -1438,6 +1438,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Max Sparpe Ratio weights\n",
+    "\n",
     "epo_weighted_15 = {\"AAPL\": 0.133,\n",
     "  \"AMZN\": 0.033,\n",
     "  \"NVDA\": 0.133,\n",
