--- a/Jaekyun/SnP(GPT-weighted).ipynb
+++ b/Jaekyun/SnP(GPT-weighted).ipynb
@@ -218,6 +218,8 @@
     }
    ],
    "source": [
+    "new_market = pd.DataFrame('./new_market.csv')\n",
+    "\n",
     "#15개 자산 pfo\n",
     "\n",
     "stocks_15 = {\n",
@@ -259,6 +261,77 @@
     "cumulative_returns_15 = (1 + portfolio_returns_15).cumprod()\n",
     "\n",
     "print(cumulative_returns_15.tail())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pricingDate\n",
+       "2023-04-24    2.802663\n",
+       "2023-04-25    2.757832\n",
+       "2023-04-26    2.749661\n",
+       "2023-04-27    2.808527\n",
+       "2023-04-28    2.823722\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_market = pd.read_csv('./new_market.csv')\n",
+    "\n",
+    "#15개 자산 pfo\n",
+    "\n",
+    "# 제공된 자산 비중\n",
+    "stocks_15 = {\n",
+    "    \"AAPL\": 0.084,\n",
+    "    \"AMZN\": 0.074,\n",
+    "    \"NVDA\": 0.064,\n",
+    "    \"JPM\": 0.054,\n",
+    "    \"PG\": 0.054,\n",
+    "    \"PFE\": 0.064,\n",
+    "    \"JNJ\": 0.064,\n",
+    "    \"KO\": 0.054,\n",
+    "    \"XOM\": 0.064,\n",
+    "    \"NEE\": 0.074,\n",
+    "    \"GOOGL\": 0.084,\n",
+    "    \"MSFT\": 0.084,\n",
+    "    \"TSLA\": 0.074,\n",
+    "    \"NKE\": 0.054,\n",
+    "    \"BAC\": 0.054\n",
+    "}\n",
+    "\n",
+    "# 날짜 범위 설정\n",
+    "start_date = '2018-05-01'\n",
+    "end_date = '2023-04-30'\n",
+    "\n",
+    "# 데이터 전처리: 날짜 필터링 및 필요한 종목만 선택\n",
+    "new_market['pricingDate'] = pd.to_datetime(new_market['pricingDate'])\n",
+    "filtered_data = new_market[(new_market['pricingDate'] >= start_date) & (new_market['pricingDate'] <= end_date)]\n",
+    "selected_data = filtered_data[['pricingDate'] + list(stocks_15.keys())]\n",
+    "\n",
+    "# 'pricingDate' 열을 인덱스로 설정\n",
+    "selected_data.set_index('pricingDate', inplace=True)\n",
+    "\n",
+    "# 각 주식의 일일 수익률 계산\n",
+    "daily_returns = selected_data.pct_change().dropna()\n",
+    "\n",
+    "# 포트폴리오 수익률 계산\n",
+    "portfolio_returns_15 = daily_returns.dot(pd.Series(stocks_15))\n",
+    "\n",
+    "# 누적 수익률 계산\n",
+    "cumulative_returns_15 = (1 + portfolio_returns_15).cumprod()\n",
+    "\n",
+    "# 마지막 5개 누적 수익률 출력\n",
+    "cumulative_returns_15.tail()"
    ]
   },
   {
@@ -790,6 +863,71 @@
     "cumulative_returns_45_equal = (1 + portfolio_returns_45_equal).cumprod()\n",
     "\n",
     "print(cumulative_returns_45_equal.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'cumulative_returns_15' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Jaekyun/SnP(GPT-weighted).ipynb 셀 16\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Jaekyun/SnP%28GPT-weighted%29.ipynb#X36sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m sp500_index_data[\u001b[39m'\u001b[39m\u001b[39mCumulative Return\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m (sp500_index_data[\u001b[39m'\u001b[39m\u001b[39mClose\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m/\u001b[39m sp500_index_data[\u001b[39m'\u001b[39m\u001b[39mClose\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39miloc[\u001b[39m0\u001b[39m]) \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Jaekyun/SnP%28GPT-weighted%29.ipynb#X36sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m# 포트폴리오 데이터 로드 (이 부분은 이미 로드된 데이터를 가정합니다)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Jaekyun/SnP%28GPT-weighted%29.ipynb#X36sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m# 예시: cumulative_returns_15, cumulative_returns_30, cumulative_returns_45 등\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Jaekyun/SnP%28GPT-weighted%29.ipynb#X36sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Jaekyun/SnP%28GPT-weighted%29.ipynb#X36sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m# 인덱스를 DateTimeIndex로 변환\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Jaekyun/SnP%28GPT-weighted%29.ipynb#X36sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m cumulative_returns_15\u001b[39m.\u001b[39mindex \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mto_datetime(cumulative_returns_15\u001b[39m.\u001b[39mindex)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Jaekyun/SnP%28GPT-weighted%29.ipynb#X36sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m cumulative_returns_30\u001b[39m.\u001b[39mindex \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mto_datetime(cumulative_returns_30\u001b[39m.\u001b[39mindex)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Jaekyun/SnP%28GPT-weighted%29.ipynb#X36sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m cumulative_returns_45\u001b[39m.\u001b[39mindex \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mto_datetime(cumulative_returns_45\u001b[39m.\u001b[39mindex)  \n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cumulative_returns_15' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# S&P500 지수와 함께 시각화\n",
+    "\n",
+    "import yfinance as yf\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# S&P 500 인덱스 데이터 가져오기\n",
+    "ticker_symbol = '^GSPC'\n",
+    "start_date = '2018-05-01'\n",
+    "end_date = '2023-04-30'\n",
+    "sp500_index_data = yf.download(ticker_symbol, start=start_date, end=end_date)\n",
+    "sp500_index_data['Cumulative Return'] = (sp500_index_data['Close'] / sp500_index_data['Close'].iloc[0]) - 1\n",
+    "\n",
+    "# 포트폴리오 데이터 로드 (이 부분은 이미 로드된 데이터를 가정합니다)\n",
+    "# 예시: cumulative_returns_15, cumulative_returns_30, cumulative_returns_45 등\n",
+    "\n",
+    "# 인덱스를 DateTimeIndex로 변환\n",
+    "cumulative_returns_15.index = pd.to_datetime(cumulative_returns_15.index)\n",
+    "cumulative_returns_30.index = pd.to_datetime(cumulative_returns_30.index)\n",
+    "cumulative_returns_45.index = pd.to_datetime(cumulative_returns_45.index)  \n",
+    "cumulative_returns_15_equal.index = pd.to_datetime(cumulative_returns_15_equal.index)   \n",
+    "cumulative_returns_30_equal.index = pd.to_datetime(cumulative_returns_30_equal.index)   \n",
+    "cumulative_returns_45_equal.index = pd.to_datetime(cumulative_returns_45_equal.index)  \n",
+    "\n",
+    "# 누적 수익률 시각화\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "cumulative_returns_15.plot(label='15-Stock Portfolio')\n",
+    "cumulative_returns_30.plot(label='30-Stock Portfolio')\n",
+    "cumulative_returns_45.plot(label='45-Stock Portfolio')\n",
+    "cumulative_returns_15_equal.plot(label='15-Stock Portfolio(equal)')\n",
+    "cumulative_returns_30_equal.plot(label='30-Stock Portfolio(equal)') \n",
+    "cumulative_returns_45_equal.plot(label='45-Stock Portfolio(equal)')\n",
+    "plt.plot(sp500_index_data.index, sp500_index_data['Cumulative Return'], label='S&P 500 Cumulative Return')\n",
+    "plt.title('Cumulative Returns of Portfolios and S&P 500 from 2018-05-01 to 2023-04-30')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Cumulative Returns')\n",
+    "plt.legend()\n",
+    "plt.show()\n"
    ]
   },
   {
