--- a/Jaekyun/SnP(GPT-weighted).ipynb
+++ b/Jaekyun/SnP(GPT-weighted).ipynb
@@ -22,16 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import yfinance as yf\n",
     "from datetime import datetime\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "yf.pdr_override()"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -184,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +196,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +206,7 @@
     "\n",
     "#15개 자산 pfo\n",
     "\n",
-    "# 제공된 자산 비중\n",
+    "# 자산 비중\n",
     "stocks_15 = {\n",
     "    \"AAPL\": 0.084,\n",
     "    \"AMZN\": 0.074,\n",
@@ -251,6 +248,57 @@
     "\n",
     "# 마지막 5개 누적 수익률 출력\n",
     "cumulative_returns_15.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#주간수익률\n",
+    "\n",
+    "# 자산 비중\n",
+    "stocks_15 = {\n",
+    "    \"AAPL\": 0.084,\n",
+    "    \"AMZN\": 0.074,\n",
+    "    \"NVDA\": 0.064,\n",
+    "    \"JPM\": 0.054,\n",
+    "    \"PG\": 0.054,\n",
+    "    \"PFE\": 0.064,\n",
+    "    \"JNJ\": 0.064,\n",
+    "    \"KO\": 0.054,\n",
+    "    \"XOM\": 0.064,\n",
+    "    \"NEE\": 0.074,\n",
+    "    \"GOOGL\": 0.084,\n",
+    "    \"MSFT\": 0.084,\n",
+    "    \"TSLA\": 0.074,\n",
+    "    \"NKE\": 0.054,\n",
+    "    \"BAC\": 0.054\n",
+    "}\n",
+    "\n",
+    "# 날짜 범위 설정\n",
+    "start_date = '2018-05-01'\n",
+    "end_date = '2023-04-30'\n",
+    "\n",
+    "# 데이터 전처리: 날짜 필터링 및 필요한 종목만 선택\n",
+    "new_market['pricingDate'] = pd.to_datetime(new_market['pricingDate'])\n",
+    "filtered_data = new_market[(new_market['pricingDate'] >= start_date) & (new_market['pricingDate'] <= end_date)]\n",
+    "selected_data = filtered_data[['pricingDate'] + list(stocks_15.keys())]\n",
+    "\n",
+    "# 'pricingDate' 열을 인덱스로 설정\n",
+    "selected_data.set_index('pricingDate', inplace=True)\n",
+    "\n",
+    "# 각 주식의 일일 수익률 계산\n",
+    "daily_returns = selected_data.pct_change().dropna()\n",
+    "\n",
+    "# 포트폴리오의 일일 수익률 계산\n",
+    "portfolio_daily_returns = daily_returns.dot(pd.Series(stocks_15))\n",
+    "\n",
+    "# 주간 수익률 계산 (매주 금요일 기준)\n",
+    "weekly_returns_gpt_15 = portfolio_daily_returns.resample('W-FRI').apply(lambda x: (1 + x).prod() - 1)\n",
+    "\n",
+    "weekly_returns_gpt_15 = pd.DataFrame(weekly_returns_gpt_15, columns=['GPT-weighted_15'])"
    ]
   },
   {
@@ -337,6 +385,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#주간수익률\n",
+    "\n",
+    "# 자산 비중\n",
+    "stocks_30 = {\n",
+    "    \"MSFT\": 0.067,\n",
+    "    \"AMZN\": 0.067,\n",
+    "    \"NVDA\": 0.067,\n",
+    "    \"AAPL\": 0.067,\n",
+    "    \"GOOGL\": 0.067,\n",
+    "    \"ADBE\": 0.067,\n",
+    "    \"JNJ\": 0.05,\n",
+    "    \"PFE\": 0.05,\n",
+    "    \"MRK\": 0.05,\n",
+    "    \"ABT\": 0.05,\n",
+    "    \"PG\": 0.05,\n",
+    "    \"KO\": 0.05,\n",
+    "    \"JPM\": 0.05,\n",
+    "    \"GS\": 0.05,\n",
+    "    \"CAT\": 0.025,\n",
+    "    \"CVX\": 0.025,\n",
+    "    \"XOM\": 0.025,\n",
+    "    \"BA\": 0.025,\n",
+    "    \"TSLA\": 0.025,\n",
+    "    \"NEE\": 0.025,\n",
+    "    \"NKE\": 0.005,\n",
+    "    \"VZ\": 0.005,\n",
+    "    \"CRM\": 0.005,\n",
+    "    \"UNH\": 0.005,\n",
+    "    \"WMT\": 0.005,\n",
+    "    \"QCOM\": 0.005,\n",
+    "    \"BAC\": 0.005,\n",
+    "    \"V\": 0.005,\n",
+    "    \"MCD\": 0.005,\n",
+    "    \"INTC\": 0.005\n",
+    "}\n",
+    "\n",
+    "# 날짜 범위 설정\n",
+    "start_date = '2018-05-01'\n",
+    "end_date = '2023-04-30'\n",
+    "\n",
+    "# 데이터 전처리: 날짜 필터링 및 필요한 종목만 선택\n",
+    "new_market['pricingDate'] = pd.to_datetime(new_market['pricingDate'])\n",
+    "filtered_data = new_market[(new_market['pricingDate'] >= start_date) & (new_market['pricingDate'] <= end_date)]\n",
+    "selected_data = filtered_data[['pricingDate'] + list(stocks_30.keys())]\n",
+    "\n",
+    "# 'pricingDate' 열을 인덱스로 설정\n",
+    "selected_data.set_index('pricingDate', inplace=True)\n",
+    "\n",
+    "# 각 주식의 일일 수익률 계산\n",
+    "daily_returns = selected_data.pct_change().dropna()\n",
+    "\n",
+    "# 포트폴리오의 일일 수익률 계산\n",
+    "portfolio_daily_returns = daily_returns.dot(pd.Series(stocks_30))\n",
+    "\n",
+    "# 주간 수익률 계산 (매주 금요일 기준)\n",
+    "weekly_returns_gpt_30 = portfolio_daily_returns.resample('W-FRI').apply(lambda x: (1 + x).prod() - 1)\n",
+    "\n",
+    "weekly_returns_gpt_30 = pd.DataFrame(weekly_returns_gpt_30, columns=['GPT-weighted_30'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [
@@ -391,6 +505,49 @@
     "\n",
     "# 마지막 5개 누적 수익률 출력\n",
     "cumulative_returns_45.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#주간수익률\n",
+    "\n",
+    "# 자산 비중\n",
+    "stocks_45 = {\n",
+    "    \"AAPL\": 0.05, \"GOOGL\": 0.04, \"MSFT\": 0.04, \"NVDA\": 0.03, \"AMD\": 0.03, \"ORCL\": 0.02, \"CRM\": 0.02, \"INTC\": 0.01, \"CSCO\": 0.01,\n",
+    "    \"JPM\": 0.04, \"GS\": 0.03, \"BAC\": 0.03, \"MS\": 0.02, \"AXP\": 0.02, \"C\": 0.01,\n",
+    "    \"JNJ\": 0.03, \"UNH\": 0.03, \"PFE\": 0.02, \"ABBV\": 0.02, \"MRK\": 0.02, \"AMGN\": 0.02, \"GILD\": 0.01,\n",
+    "    \"PG\": 0.03, \"KO\": 0.03, \"NKE\": 0.02, \"PEP\": 0.02, \"COST\": 0.02, \"WMT\": 0.02, \"TGT\": 0.01,\n",
+    "    \"XOM\": 0.025, \"CVX\": 0.025, \"NEE\": 0.02, \"DUK\": 0.01, \"SO\": 0.01, \"SLB\": 0.01,\n",
+    "    \"MMM\": 0.02, \"CAT\": 0.02, \"HON\": 0.02, \"GE\": 0.02, \"ADP\": 0.02,\n",
+    "    \"AMZN\": 0.02, \"META\": 0.02, \"HD\": 0.02, \"VZ\": 0.01, \"MRK\": 0.01\n",
+    "}\n",
+    "\n",
+    "# 날짜 범위 설정\n",
+    "start_date = '2018-05-01'\n",
+    "end_date = '2023-04-30'\n",
+    "\n",
+    "# 데이터 전처리: 날짜 필터링 및 필요한 종목만 선택\n",
+    "new_market['pricingDate'] = pd.to_datetime(new_market['pricingDate'])\n",
+    "filtered_data = new_market[(new_market['pricingDate'] >= start_date) & (new_market['pricingDate'] <= end_date)]\n",
+    "selected_data = filtered_data[['pricingDate'] + list(stocks_45.keys())]\n",
+    "\n",
+    "# 'pricingDate' 열을 인덱스로 설정\n",
+    "selected_data.set_index('pricingDate', inplace=True)\n",
+    "\n",
+    "# 각 주식의 일일 수익률 계산\n",
+    "daily_returns = selected_data.pct_change().dropna()\n",
+    "\n",
+    "# 포트폴리오의 일일 수익률 계산\n",
+    "portfolio_daily_returns = daily_returns.dot(pd.Series(stocks_45))\n",
+    "\n",
+    "# 주간 수익률 계산 (매주 금요일 기준)\n",
+    "weekly_returns_gpt_45 = portfolio_daily_returns.resample('W-FRI').apply(lambda x: (1 + x).prod() - 1)\n",
+    "\n",
+    "weekly_returns_gpt_45 = pd.DataFrame(weekly_returns_gpt_45, columns=['GPT-weighted_45'])"
    ]
   },
   {
@@ -620,7 +777,6 @@
     "    \"HD\": 0.022222,\n",
     "    \"VZ\": 0.022222,\n",
     "    \"MRK\": 0.022222,\n",
-    "\n",
     "}\n",
     "\n",
     "start_date = '2018-05-01'\n",
