--- a/S&P code/SnP(GPT-weighted).ipynb
+++ b/S&P code/SnP(GPT-weighted).ipynb
@@ -4,20 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **15, 30, 45개 자산 추출(Chat GPT-4)**\n",
-    "S&P500 Index 구성종목 중에서, Ghat GPT의 데이터를 기반으로 S&P500 Index보다 뛰어난 퍼포먼스를 낼 수 있는 15, 30, 45개 종목으로 구성된 포트폴리오를 추출하라는 명령 수행.\n",
-    "\n",
-    "Chat gpt-4.0에 다음과 같이 prompt를 입력: \n",
-    "\n",
-    "Prompt 1: \"Using a range of investing principles taken from leading funds, create a theoretical fund comprising of at least X stocks (mention their tickers) from the S&P500 with the goal to outperform the S&P500 index\" (X is 15, 30 or 45 for the three cases);\n",
-    "\n",
-    "Prompt 2: \"Extract only the ticker symbols of the stocks comprising the fund from the previous response: - '{input}'. In your response to this prompt, list only the ticker symbols separated by spaces\" (here the output response of prompt 1 was used in place of {input});\n",
-    "\n",
-    "X = 15, 30, 45 로 각각 30번씩 수행 후, 가장 높은 빈도의 상위 15, 30, 45개 종목 리스트 추출\n",
-    "\n",
-    "\n",
-    "\n",
-    "**이건 실수인데, prompt 1, 2를 함께 실행했어야함. 그러면 리스트로 애초에 티커가 나왔을 듯. 그렇게 되면 아래 빈도확인하는 코드는 필요없음.**"
+    "# **15, 30, 45개 자산 추출(Chat GPT-4)**"
    ]
   },
   {
@@ -93,83 +80,6 @@
     "top_30_tickers = ticker_frequency.head(30).index.tolist()\n",
     "\n",
     "print(top_30_tickers)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Chat GPT에 위 포트폴리오들의 가중치 배분 요청 (GPT-weighted 포트폴리오)**\n",
-    "\n",
-    "Chat gpt-4.0에 다음과 같이 prompt를 입력: \n",
-    "\n",
-    "Prompt 3: \"Assume you're designing a theoretical model portfolio from these S&P500 stocks:\n",
-    "{input}. Provide a hypothetical example of how you might distribute the weightage of these stocks (normalized, i.e., weights should add up to 1.00) in the portfolio to potentially outperform the S&P500 index. Also mention the underlying strategy or logic which you used to assign these weights. only use default mode.\" \n",
-    "\n",
-    "Prompt 4: \"Extract tickers of stocks and corresponding weights as a single comma ',' separated string, with the weights expressed as floats: '{input}' \" (here the output response of prompt 3 was used in place of {input}).\n",
-    "\n",
-    "여기서 {input}은 이전 프롬프트에서 가장 자주 등장하는 X(15,30,45)개의 주식 티커 리스트임\n",
-    "\n",
-    "### **주의할점**\n",
-    "\n",
-    "논문에서 제공하는 기존 프롬프트에서 only use default mode 라는 말을 추가함. 이유는, data analysis를 자동으로 사용해서 오류가 발생하면 자동으로 그냥 1/n 포트폴리오를 반환하는 경우가 있었기 때문."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **결과**\n",
-    "15개 자산 pfo\n",
-    "\n",
-    "AAPL: 0.084\n",
-    "AMZN: 0.074\n",
-    "NVDA: 0.064\n",
-    "JPM: 0.054\n",
-    "PG: 0.054\n",
-    "PFE: 0.064\n",
-    "JNJ: 0.064\n",
-    "KO: 0.054\n",
-    "XOM: 0.064\n",
-    "NEE: 0.074\n",
-    "GOOGL: 0.084\n",
-    "MSFT: 0.084\n",
-    "TSLA: 0.074\n",
-    "NKE: 0.054\n",
-    "BAC: 0.054\n",
-    "\n",
-    "30개 자산 pfo\n",
-    "\n",
-    "MSFT: 0.067\n",
-    "AMZN: 0.067\n",
-    "NVDA: 0.067\n",
-    "AAPL: 0.067\n",
-    "GOOGL: 0.067\n",
-    "ADBE: 0.067\n",
-    "JNJ: 0.05\n",
-    "PFE: 0.05\n",
-    "MRK: 0.05\n",
-    "ABT: 0.05\n",
-    "PG: 0.05\n",
-    "KO: 0.05\n",
-    "JPM: 0.05\n",
-    "GS: 0.05\n",
-    "CAT: 0.025\n",
-    "CVX: 0.025\n",
-    "XOM: 0.025\n",
-    "BA: 0.025\n",
-    "TSLA: 0.025\n",
-    "NEE: 0.025\n",
-    "NKE: 0.005\n",
-    "VZ: 0.005\n",
-    "CRM: 0.005\n",
-    "UNH: 0.005\n",
-    "WMT: 0.005\n",
-    "QCOM: 0.005\n",
-    "BRK.B: 0.005\n",
-    "V: 0.005\n",
-    "MCD: 0.005\n",
-    "INTC: 0.005"
    ]
   },
   {
